Доработка проекта в части вывода информации. Требуется добавить время, потраченное на каждую сборку